--- a/ejercicio_boostrap.html
+++ b/ejercicio_boostrap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <title></title>
         <meta charset="UTF-8">
@@ -96,7 +96,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Verificar</label>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-primary">Enviar </button>
         </form>
          
     </footer>
